--- a/BudgetApp/Pages/Components/Imports/Transactions/ImportTransactionSchemeForm.razor
+++ b/BudgetApp/Pages/Components/Imports/Transactions/ImportTransactionSchemeForm.razor
@@ -1,11 +1,6 @@
 @using System.Dynamic
 @using BudgetApp.Core.Features.BankAccounts.Models
 @using BudgetApp.Core.Features.ImportTransactions.Models
-@using BudgetApp.Core.Features.Transactions.Commands
-@using BudgetApp.Core.Features.Transactions.Models
-@using MediatR
-@inject IMediator Mediator
-@inject DialogService DialogService
 
 @if (showForm)
 {
@@ -21,6 +16,12 @@
                     </div>
                     <div class="col-md-8">
                         <RadzenDropDown @bind-Value="ImportTransactionSchemeModel.PaymentDateIndex" Data="@AvailableValues" TextProperty="Value" ValueProperty="Key"/>
+                    </div>
+                    <div class="col-md-4 align-items-center d-flex">
+                        <RadzenLabel Text="Recipient"/>
+                    </div>
+                    <div class="col-md-8">
+                        <RadzenDropDown @bind-Value="ImportTransactionSchemeModel.RecipientIndex" Data="@AvailableValues" TextProperty="Value" ValueProperty="Key"/>
                     </div>
                     <div class="col-md-4 align-items-center d-flex">
                         <RadzenLabel Text="Description"/>
@@ -45,7 +46,7 @@
                     </div>
                     <div class="col-md-8">
                         <RadzenCheckBox @bind-Value="ImportTransactionSchemeModel.SaveTransactionScheme"/>
-                        
+
                     </div>
                     <br/>
                     <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Save" Style="width: 30%"/>
@@ -55,14 +56,13 @@
     </div>
 }
 
-
 @code {
 
     [Parameter]
     public List<BankAccountModel> BankAccounts { get; set; }
 
     [Parameter]
-    public ImportTransactionSchemeModel ImportTransactionSchemeModel { get; init; }
+    public ImportTransactionSchemeModel ImportTransactionSchemeModel { get; set; }
 
     [Parameter]
     public ExpandoObject ExampleTransaction { get; set; }
@@ -88,13 +88,19 @@
                 if (availableValue != null)
                     AvailableValues[i] = availableValue.ToString() ?? string.Empty;
             }
-
+            
             showForm = true;
         }
     }
 
     private async Task Submit()
     {
+        if (ImportTransactionSchemeModel.SaveTransactionScheme)
+        {
+            var selectedBank = BankAccounts.First(a => a.Id == ImportTransactionSchemeModel.BankAccountId);
+            ImportTransactionSchemeModel.Name = selectedBank.Name;
+        }
+
         await TransactionSchemeSaved.InvokeAsync();
     }
 
