--- a/BudgetApp/Shared/NavMenu.razor.css
+++ b/BudgetApp/Shared/NavMenu.razor.css
@@ -22,6 +22,9 @@
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
+    .nav-item span {
+        padding-left: 0.4rem;
+    }
 
     .nav-item:first-of-type {
         padding-top: 1rem;
