--- a/BudgetApp/Pages/Components/BankAccounts/BankAccountsSummary.razor
+++ b/BudgetApp/Pages/Components/BankAccounts/BankAccountsSummary.razor
@@ -12,6 +12,8 @@
                 <tr>
                     <th>Name</th>
                     <th>Current Amount</th>
+                    <th>Upcoming payments</th>
+                    <th>End of the month</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,6 +21,8 @@
                 {
                     <tr>
                         <td>@account.Name</td>
+                        <td>@account.Amount zł</td>
+                        <td>0 zł</td>
                         <td>@account.Amount zł</td>
                     </tr>
                 }
